--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
                     <h3>Куплено</h3>
                     </div>
                     <div class="byuedlist">
-                    
+                    <div class="buyed-itm">
+                            <div class="buyed-itm-name"></div>
+                            <div class="buyed-itm-amount"></div>
+                        </div>
                     </div>
                 </div>            
             </div>
